WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263182
[IFC] Fallback to full invalidation when first-letter is present
https://bugs.webkit.org/show_bug.cgi?id=263182
Summary
[IFC] Fallback to full invalidation when first-letter is present
John Wilander
Reported
2023-10-15 21:28:46 PDT
Created
attachment 468222
[details]
Repro case. See attached test case.
Attachments
Repro case.
(1.20 KB, text/html)
2023-10-15 21:28 PDT
,
John Wilander
no flags
Details
More reduced test case
(667 bytes, text/html)
2023-10-17 10:26 PDT
,
Rob Buis
no flags
Details
manual test
(331 bytes, text/html)
2023-10-17 20:07 PDT
,
alan
no flags
Details
[fast-cq]Patch
(3.63 KB, patch)
2023-10-18 15:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-15 21:28:54 PDT
Comment hidden (obsolete)
<
rdar://problem/116997791
>
John Wilander
Comment 2
2023-10-15 21:29:28 PDT
Real radar:
rdar://116449508
Rob Buis
Comment 3
2023-10-17 10:26:12 PDT
Created
attachment 468250
[details]
More reduced test case
alan
Comment 4
2023-10-17 20:02:43 PDT
Hi Rob, thank for looking into this. I fixed a few similar bugs last week and they were all very involved (this is about partial invalidation and has nothing to do with the code where the assertion happens). I could take this over unless you would want to see this bug through. Either way is fine with me.
alan
Comment 5
2023-10-17 20:07:21 PDT
Created
attachment 468257
[details]
manual test
Rob Buis
Comment 6
2023-10-18 09:16:45 PDT
(In reply to zalan from
comment #4
)
> Hi Rob, thank for looking into this. I fixed a few similar bugs last week > and they were all very involved (this is about partial invalidation and has > nothing to do with the code where the assertion happens). I could take this > over unless you would want to see this bug through. Either way is fine with > me.
Hi Alan, yes I remember from a previous time these fixes are quite involved, feel free to go ahead.
alan
Comment 7
2023-10-18 09:27:49 PDT
(In reply to Rob Buis from
comment #6
)
> (In reply to zalan from
comment #4
) > > Hi Rob, thank for looking into this. I fixed a few similar bugs last week > > and they were all very involved (this is about partial invalidation and has > > nothing to do with the code where the assertion happens). I could take this > > over unless you would want to see this bug through. Either way is fine with > > me. > > Hi Alan, yes I remember from a previous time these fixes are quite involved, > feel free to go ahead.
Thank you!
alan
Comment 8
2023-10-18 15:38:02 PDT
Created
attachment 468269
[details]
[fast-cq]Patch
EWS
Comment 9
2023-10-19 06:35:56 PDT
Committed
269519@main
(c7356ae7aaa3): <
https://commits.webkit.org/269519@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 468269
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug