[IFC] Fallback to full invalidation when first-letter is present https://bugs.webkit.org/show_bug.cgi?id=263182 <rdar://116449508>

Reviewed by Antti Koivisto.

RenderTreeUpdater::updateTextRenderer computes inconsistent values for the damage offset when first-letter is present which confuses inline layout invalidation.
Let's disable partial layout for content with first-letter for now (enable is blocked by webkit.org/b/263343).

* LayoutTests/fast/text/first-letter-partial-invalidation-crash-expected.txt: Added.
* LayoutTests/fast/text/first-letter-partial-invalidation-crash.html: Added.
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::shouldInvalidateLineLayoutPathAfterChangeFor):

Canonical link: https://commits.webkit.org/269519@main