Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp
@@ -175,6 +175,17 @@ bool shouldInvalidateLineLayoutPathAfterChangeFor(const RenderBlockFlow& rootBlo
         // FIXME: InlineItemsBuilder needs some work to support paragraph level bidi handling.
         return true;
     }
+    auto hasFirstLetter = [&] {
+        // FIXME: RenderTreeUpdater::updateTextRenderer produces odd values for offset/length when first-letter is present webkit.org/b/263343
+        if (rootBlockContainer.style().hasPseudoStyle(PseudoId::FirstLetter))
+            return true;
+        if (rootBlockContainer.isAnonymous())
+            return rootBlockContainer.containingBlock() && rootBlockContainer.containingBlock()->style().hasPseudoStyle(PseudoId::FirstLetter);
+        return false;
+    };
+    if (hasFirstLetter())
+        return true;
+
     if (lineLayout.isDamaged()) {
         auto previousDamages = lineLayout.damageReasons();
         if (previousDamages && previousDamages != Layout::InlineDamage::Reason::Append) {
